tests/idris2/misc/namespace002/expected
1/1: Building Issue1313 (Issue1313.idr)
Error: While processing right hand side of g. When unifying:
    Int -> Int -> Int
and:
    Int
Mismatch between: Int -> Int -> Int and Int.

Issue1313:9:17--9:18
 5 |
 6 | namespace Y
 7 |
 8 |   g : Int -> Int -> Int
 9 |   g x y = x + f g
                     ^

